tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__Shiny-AAAAAAAAAAAAAAAAAAABfw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 383,
  "prerequisites": [
    453
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What in the world is this? This is amazing! I need more of these! They will be an amazing containment material for the wormhole!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Shiny!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    453
  ],
  "rewards": [],
  "tasks": []
}
