tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__TecTechMultibloc-AAAAAAAAAAAAAAAAAAAKeg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2682,
  "prerequisites": [
    2005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "TecTech Multiblock Common Functionality\n\nMultiple Ampere and Laser Hatches Compatibility - to ease power distribution.\n\nPower Pass - Allows connected dynamo hatches to take power from the controller and output it, just like the active transformer does (and that is why the controller always need it in its recipe if that function is enabled...). [warn]Be sure to turn off Power Pass if you want to edit your machine and don't want it to explode![/warn]\n\nConstructable Interface - Allows visualizing the structure with blueprints (there is an API to implement that for any block, but almost nothing does).\n\nFrom left to right is 1, then clockwise for the rest in TT multi interfaces.\n\n1) Parameters - They are the way of the controller to communicate with player and parameter hatches. Lights indicate status but more detailed information can be seen when moused over. The tooltip contains ID in form of HatchID:ParameterNumber:Direction, Current Status, Current Value, and Short Description.\n\n2) Uncertainty status - These 9 blocks indicate uncertainty status of the machine. If the lights are on, this machine requires an uncertainty resolver. Red = Bad, Green = Good. You need to do the absurd puzzle before using the machine.\n\nControl buttons - Buttons might change their behavior and appearance depending on machine but usually they work like this, starting from top:\n\n3) Power Pass - Toggles Power Pass.\n\n4) Safe Void - Currently unused.\n\n5) Power Switch - Soft Mallet with your finger...\n\n6) Input slot - Standard functionality.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "TecTech Multiblocks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2005
  ],
  "rewards": [],
  "tasks": []
}
