tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__TheBeginningofth-AAAAAAAAAAAAAAAAAAAH1g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2006,
  "prerequisites": [
    2005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to TecTech! The pinnacle of absolute high-tier machinery for all your end-tier needs. However, learning TecTech is incredibly confusing, so listen very carefully.\n\nFirst, you'll need to gather various casings for your machines that you'll need. We've provided some examples of the blocks you'll need, but you should expect to have to craft more. Lots more.\n\nYou use the optical cables to connect machines together. Just make sure that they're painted, as well as what you want to connect them to.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Beginning of the End Game",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2005
  ],
  "rewards": [],
  "tasks": []
}
