tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__Tier7ZPM-AAAAAAAAAAAAAAAAAAAKMg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2610,
  "prerequisites": [
    1493,
    1213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The ZPM tier. Speaking of ZPM, did you know the name is based on the Zero Point Module from the show Stargate SG-1, which continues the story of the movie? It's a great show, go watch it! Maybe you have already found a depleted ZPM in the world generation. If you find some help, maybe you can even create a completely new one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 7 (ZPM)",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "tierthemes:zpm",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    1213
  ],
  "rewards": [],
  "tasks": []
}
