tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__WasntThisOnlyFou-AAAAAAAAAAAAAAAAAAAKbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2669,
  "prerequisites": [
    2627
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll need Neutronium for UV and the T7 rocket, so let's make some.\n\nTo get Neutronium, go to one of the planets that has the small ores. Then mix it with Helium Plasma to make Raw Neutronium Dust. It can be smelted in a Blast Furnace at 9000K and 491,520 EU/t. This recipe takes a long time and a lot of power. Better make another EBF or Volcanus. Or a few. Or upgrade your Mega Blast Furnace.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wasn't This Only Found in the Center of Neutron Stars?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2627
  ],
  "rewards": [],
  "tasks": []
}
