tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__WhereNoOneHasGon-AAAAAAAAAAAAAAAAAAAKVg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2646,
  "prerequisites": [
    2640,
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another rocket, another set of planets. Get to work already, that's why you made it, right?\n\nThere's only two new planets this time, Proteus and Triton. They're both moons of Neptune.\n\nThe new veins are Neutronium, Niobium, and Thorium. The ores are: Adamantium, Gallium, Naquadah, Neutronium, Niobium, Plutonium-241, Titanium, Uranium 235, Uranium-238, and Yttrium.\n\nYou can get Black Plutonium from small ores on Triton.\n\nYou should pick up some planet blocks while you're visiting.\n\nThe schematic is on Proteus.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Where No One Has Gone Before",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2640,
    2610
  ],
  "rewards": [],
  "tasks": []
}
