tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__YouCantGetEnough-AAAAAAAAAAAAAAAAAAAKNA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2612,
  "prerequisites": [
    2611
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Just Make It ™.\n\n[note]PS: You can make the ZPM CA now and start on the wetware line if you want, but the quests are in UV since you can't make the last circuit until then.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You Can't Get Enough of This Pt 2 in ZPM",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2611
  ],
  "rewards": [],
  "tasks": []
}
